update nomen and clean.

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -223,6 +223,8 @@ arb:
         # third_party: "Compte de tiers"
         # transport_vehicle_asset_depreciations: "Ammortissements des véhicules de transport"
         # transport_vehicle_assets: "Matériel de transport"
+        # transports_expenses: "Frais de transports"
+        # travels_expenses: "Frais de voyages"
         # usual_associated_accounts: "Associes comptes courants - comptes courants"
         # usual_bank_overdraft: "Concours bancaires courants"
         # vat: "État - Taxes sur le chiffre d’affaire"
@@ -238,6 +240,7 @@ arb:
       items:
         # accountancy: "Comptabilité"
         # animal_farming: "Élevage bovins"
+        # aromatic_and_medicinal_plants: "Plantes médicinales et aromatiques"
         # cattle_farming: "Élevage"
         # exploitation: "Exploitation"
         # fallow_land: "Jachère"
@@ -245,10 +248,15 @@ arb:
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
+        # oilseed_crops: "Culture oléagineuse"
+        # palmiped_farming: "Élevage de palmipèdes"
         # pig_farming: "Élevage porcins"
         # potato_crops: "Culture de pomme de terre"
+        # poultry_farming: "Élevage avicole"
         # prairie: "Prairie"
+        # protein_crops: "Culture protéagineuse"
         # purchases: "Achats"
+        # rabbit_farming: "Élevage cunicole"
         # sales: "Ventes"
         # service: "Service"
         # sheep_farming: "Élevage ovins"
@@ -874,11 +882,17 @@ arb:
       attributes:
         # expression: "Expression"
       items:
+        # amount_of_substance: "Quantité de matière"
         # concentration: "Concentration"
         # electric_current: "Intensité"
+        # energy: "Energie"
         # length: "Longueur"
+        # luminous_intensity: "Intensité lumineuse"
+        # mass_concentration: "Concentration massique"
         # none: "Aucune"
         # power: "Puissance"
+        # specific_volume: "Volume spécifique"
+        # surface_area: "Superficie"
         # temperature: "Temperature"
         # time: "Temps"
         # volume: "Volume"
@@ -917,12 +931,17 @@ arb:
         # general_journal: "Journal général"
         # general_ledger: "Grand livre"
         # income_statement: "Compte de résultat"
+        # incoming_delivery_docket: "Bon de reception"
         # inventory: "Inventaire"
         # journal: "Journal"
         # manure_management_plan: "Plan de fumure"
+        # outgoing_delivery_docket: "Bon de livraison"
+        # outgoing_delivery_journal: "Journal de livraisons"
         # phytosanitary_registry: "Registre phytosanitaire"
         # prescription: "Prescription vétérinaire"
         # profit_and_loss_statement: "Compte de résultat"
+        # purchase_estimate: "Devis d'achat"
+        # purchase_invoice: "Facture d'achat"
         # purchase_order: "Achat"
         # sales_estimate: "Devis de vente"
         # sales_invoice: "Facture de vente"
@@ -944,6 +963,7 @@ arb:
         # civil_society: "Société civile"
         # collectivity: "Collectivité"
         # company: "Société"
+        # cooperative: "Cooperative"
         # doctor: "Docteur"
         # economic_interest_group: "Groupement d’intérêt économique"
         # entity: "Entité"
@@ -991,7 +1011,9 @@ arb:
           # string: "Texte"
         gathering: #?
         interpolation: #?
-        related_to: #?
+        related_to:
+          # individual: "Individu"
+          # whole: "Population"
       item_lists:
         animal_disease_state:
           choices:
@@ -1007,7 +1029,12 @@ arb:
         choices: #?
         clostridial_spores_concentration: #?
         cultural_soil_state:
-          choices: #?
+          choices:
+            # covered: "Couvert végétal"
+            # grown: "Culture"
+            # nude: "Nu"
+            # plowed: "Guéret"
+            # raw: "Etat sauvage"
         dry_matter_rate: #?
         fat_matters_concentration: #?
         freezing_point_temperature: #?
@@ -1016,7 +1043,9 @@ arb:
         immunoglobulins_concentration: #?
         inel_index: #?
         inhibitors_presence:
-          choices: #?
+          choices:
+            # negative: "Negatif"
+            # positive: "Positif"
         isu_index: #?
         lipolysis: #?
         livestock_unit: #?
@@ -1029,13 +1058,20 @@ arb:
             # without_help: "Sans aide"
         mammalia_born_cycle: #?
         mammalia_lactation_state:
-          choices: #?
+          choices:
+            # depletion: "Tarie"
+            # lactation: "Lactation"
         mammalia_reproduction_event_abortion: #?
         mammalia_reproduction_method_embryo_transplant: #?
         mammalia_reproduction_state:
-          choices: #?
+          choices:
+            # heat: "Chaleur"
+            # pregnancy: "Pleine"
         mammalia_twins_condition:
-          choices: #?
+          choices:
+            # none: "N/A"
+            # triplets: "Triplés"
+            # twins: "Jumeaux"
         maximum_load_net_volume: #?
         maximum_load_net_weight: #?
         meat_withdrawal_period: #?
@@ -1047,7 +1083,10 @@ arb:
         nitrogen_concentration: #?
         phosphorus_concentration: #?
         plant_life_state:
-          choices: #?
+          choices:
+            # germination: "Germination"
+            # maturity: "Maturité"
+            # senescence: "Senescence"
         plant_reproduction_state:
           choices: #?
         population: #?
@@ -1071,9 +1110,12 @@ arb:
         # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         # animal_life_state: "Phase du bioprocessus de vie d’un animal"
         # application_width: "Largeur de travail"
+        # calving_ease_index: "Index de facilité de naissane"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # economical_milk_index: "INEL (INdex Économique Laitier)"
+        # energy: "Energie"
         # fat_matters_concentration: "Teneur en matières grasses"
+        # fertility_index: "Index de fertilité"
         # freezing_point_temperature: "Point de solidification"
         # geographic_coordinate: "Coordonnées géographiques"
         # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
@@ -1227,10 +1269,14 @@ arb:
         # haymaking: "Fenaison"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
+        # plant_fertilisation: "Fertilisation"
         # plant_illness_treatment: "Traitements phytosanitaires"
+        # plowing: "Labour"
+        # raking: "Hersage"
         # soil_enrichment: "Amendement"
         # sowing: "Semis"
         # tillage: "Travail du sol"
+        # transformation: "Transformation"
         # viviparous_birth: "Reproduction (vivipare)"
       # name: "Types de procédures"
     product_nature_categories:
@@ -1280,30 +1326,39 @@ arb:
       items:
         # animal_food: "Aliment pour animaux"
         # animal_medicine: "Produit vétérinaire"
+        # aves_band: "Bande"
+        # aves_herd: "Groupe"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d’un bâtiment"
         # calf: "Veau"
         # cattle_herd: "Troupeau de bovins"
         # crop: "Culture"
         # cultivable_land_parcel: "Parcelle culturale"
+        # electricity: "Electricité"
         # equipment: "Équipement"
         # equipment_rent: "Location d’équipement"
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer: "Engrais"
+        # fuel: "Gasoil"
+        # gas: "Essence"
         # grain: "Graine"
         # grass: "Herbe"
         # installation: "Installation"
+        # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
         # male_adult_cow: "Taureau"
         # male_young_cow: "Taurillon"
         # milk: "Lait"
+        # natural_water: "Eau de pluie / puit"
         # other_consumable: "Autres consommables"
         # plant_medicine: "Produit phytosanitaire"
+        # running_water: "Eau du réseau"
         # seed: "Semence"
         # small_equipment: "Petit matériel"
         # straw: "Paille"
+        # wine: "Vin"
         # worker: "Responsable"
       # name: "Catégories de produits"
     product_nature_variants:
@@ -1320,6 +1375,7 @@ arb:
           # 1l_dose: "dose de 1l"
           # 25kg_bag: "sac de 25kg"
           # bag: "sac"
+          # band: "Bande"
           # box: "boîte"
           # building: "bâtiment"
           # can: "bidon"
@@ -1327,8 +1383,10 @@ arb:
           # equipment: "équipement"
           # head: "tête"
           # hectare: "hectare"
+          # hectoliter: "Hectolitre"
           # hour: "heure"
           # kilogram: "kilogramme"
+          # kilowatt_hour: "Kilowatt Heure"
           # liter: "litre"
           # person: "personne"
           # room: "salle"
@@ -1343,6 +1401,7 @@ arb:
         # animal_food_building_division: "Piece d’accueil pour les aliments"
         # animal_waste_building_division: "Zone des déchets organiques"
         # anti_slug: "Anti-limace"
+        # apple_crop: "Verger de pommiers"
         # baler: "Botteleuse"
         # barley_crop: "Culture d’orge"
         # barley_grain: "Grain d’orge"
@@ -1366,6 +1425,8 @@ arb:
         # cow_milk: "Lait de vache"
         # cultivable_land_parcel: "Parcelle culturale"
         # diesel: "Diesel"
+        # duck_band: "Bande de canards"
+        # duck_herd: "Groupe de canards"
         # durum_wheat_crop: "Culture de blé dur"
         # electricity: "Électricité"
         # equipment: "Équipement"
@@ -1386,6 +1447,7 @@ arb:
         # hay_rake: "Andaineur"
         # helianthus_herbicide: "Herbicide tournesol"
         # insecticide: "Insecticide"
+        # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
         # male_adult_cow: "Taureau"
@@ -1395,13 +1457,16 @@ arb:
         # mineral_cleaner: "Nettoyant chimique"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
+        # natural_water: "Eau de pluie / du puit"
         # office_building: "Bureau"
         # office_building_division: "Pièce de bureau"
         # other_herbicide: "Herbicide autre"
         # plow: "Charrue"
+        # plum_crop: "Verger de pruniers"
         # poacea_herbicide: "Herbicide graminées"
         # poaceae_fungicide: "Fongicide céréales"
         # riflexine: "Riflexine"
+        # running_water: "Eau du réseau"
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
         # silage: "Ensilage"
@@ -1418,11 +1483,15 @@ arb:
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # vine_grape_berry: "Grappe de raisin"
+        # vine_grape_crop: "Culture de vigne"
+        # vine_grape_must: "Mout de raisin"
         # wheat_crop: "Culture de blé"
         # wheat_grain: "Graine de blé"
         # wheat_seed_25: "Semence de blé 25kg"
         # wheat_straw: "Paille de blé"
         # wheat_straw_bales: "Bottes de paille de blé"
+        # wine: "Vin"
         # zea_herbicide: "Herbicide maïs"
       # name: "Variantes de produits"
     product_natures:
@@ -1454,6 +1523,8 @@ arb:
         # chemical_fertilizer: "Engrais chimique"
         # crop: "Culture"
         # cultivable_land_parcel: "Parcelle culturale"
+        # duck_band: "Bande de canards"
+        # duck_herd: "Groupe de canards"
         # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Zone de stockage des équipements"
@@ -1470,6 +1541,7 @@ arb:
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
         # insecticide: "Insecticide"
+        # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
         # male_adult_cow: "Taureau"
@@ -1480,8 +1552,10 @@ arb:
         # mineral_cleaner: "Nettoyant chimique"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
+        # natural_water: "Eau de pluie / du puit"
         # organic_fertilizer: "Engrais organique"
         # plow: "Charrue"
+        # running_water: "Eau du réseau"
         # seed: "Semence"
         # small_equipment: "Petit matériel"
         # sower: "Semoir"
@@ -1493,6 +1567,7 @@ arb:
         # technician: "Technicien"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # wine: "Vin"
       # name: "Type de produits"
     production_natures: #?
     roles:
@@ -1602,17 +1677,26 @@ arb:
         # bos: "Bovin"
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
+        # cabernet_franc: "Cabernet franc"
+        # cabernet_sauvignon: "Cabernet sauvignon"
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
+        # carignan: "Carignan"
+        # chardonnay: "Chardonnay"
         # cultivable_land_parcel: "Parcelle culturale"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
+        # electricity: "Electricité"
         # equipment: "Équipement"
         # forager: "Ensileuse"
+        # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         # fungus: "Champignon"
         # gallus: "Galinacée"
+        # gas: "Essence"
         # grain: "Grain"
+        # grenache: "Grenache"
+        # grenache_noir: "Grenache noir"
         # helianthus: "Tournesol"
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
@@ -1623,11 +1707,14 @@ arb:
         # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
         # lepus: "Lagomorphe"
+        # malus: "Pommier"
         # mammalia: "Mammifère"
         # manure: "Fumier"
         # matter: "Matérialisable"
         # meat: "Viande"
         # medicine: "Médicament"
+        # merlot_blanc: "Merlot blanc"
+        # merlot_noir: "Merlot noir"
         # milk: "Lait"
         # mineral_food: "Aliment minéral"
         # mineral_matter: "Matière minérale"
@@ -1636,6 +1723,7 @@ arb:
         # mower: "Faucheuse"
         # organic_matter: "Matière organique"
         # ovis: "Ovin"
+        # pinot_noir: "Pinot noir"
         # plant: "Végétal"
         # plant_food: "Nourriture végétale"
         # plant_medicine: "Produit phytosanitaire"
@@ -1645,9 +1733,12 @@ arb:
         # product: "Produit"
         # product_group: "Groupe de produit"
         # property_title: "Titre de propriété"
+        # prunus: "Prunier"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
+        # sauvignon: "Sauvignon"
+        # sauvignon_blanc: "Sauvignon blanc"
         # seed: "Semence"
         # service: "Service"
         # settlement: "Agencement"
@@ -1658,13 +1749,18 @@ arb:
         # straw: "Pailles"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
+        # syrah: "Syrah"
         # tank: "Réservoir"
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
+        # ugni_blanc: "Ugni blanc"
+        # vitis: "Vigne"
+        # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
+        # wine: "Vin"
         # worker: "Travailleur"
         # zea: "Maïs"
         # zone: "Zone physique"
