--- a/config/locales/eng/complement.yml
+++ b/config/locales/eng/complement.yml
@@ -636,6 +636,28 @@ eng:
         service: "Service"
         worker: "Worker"
         zone: "Zone"
+    production_support_marker:
+      indicator_name:
+        animal_disease_state: "Animal disease state"
+        animal_life_state: "Animal life state"
+        cells_concentration: "Cells concentration"
+        clostridial_spores_concentration: "Clostridial spores concentration"
+        fat_matters_concentration: "Fat matters concentration"
+        freezing_point_temperature: "Freezing point temperature"
+        ground_appearance: "Ground appearance"
+        immunoglobulins_concentration: "Immunoglobulins concentration"
+        in_production: "In production"
+        inhibitors_presence: "Inhibitors presence"
+        lipolysis: "Lipolysis"
+        mammalia_lactation_state: "Mammalia lactation state"
+        mammalia_reproduction_state: "Mammalia reproduction state"
+        plant_life_state: "Plant life state"
+        plant_reproduction_state: "Plant reproduction state"
+        protein_matters_concentration: "Protein matters concentration"
+        sowable: "Sowable"
+        temperature: "Temperature"
+        total_bacteria_concentration: "Total bacteria concentration"
+        urea_concentration: "Urea concentration"
     sale_item:
       indicator:
         animal_disease_state: "Animal disease state"
