--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -507,6 +507,11 @@ fra:
       # edit: "Edit backend/product process"
       # index: "Index backend/product process"
       # new: "New backend/product process"
+    backend/production_support_markers:
+      # edit: "Edit backend/production support marker"
+      # index: "Index backend/production support marker"
+      # new: "New backend/production support marker"
+      # show: "Show backend/production support marker"
     backend/production_supports:
       # edit: "Edit backend/production support"
       # index: "Index backend/production support"
@@ -775,6 +780,7 @@ fra:
     # backend/product_phases: "Backend/product phases"
     # backend/product_process_phases: "Backend/product process phases"
     # backend/product_processes: "Backend/product processes"
+    # backend/production_support_markers: "Backend/production support markers"
     # backend/production_supports: "Backend/production supports"
     # backend/productions: "Backend/productions"
     backend/products: "Produits"
