--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -131,6 +131,7 @@ eng:
     backend/cells/product_pie_cells: #?
     backend/cells/purchases_bar_cells: #?
     backend/cells/purchases_expense_bar_cells: #?
+    backend/cells/revenues_by_product_nature_cells: #?
     backend/cells/revenus_by_product_nature_cells: #?
     backend/cells/rss_cells: #?
     backend/cultivable_land_parcels:
@@ -1479,7 +1480,7 @@ eng:
       one: "1 result"
       other: "%{count} results"
       zero: "No results"
-    # revenus_by_product_nature: "Chiffre d'affaire par type de produit"
+    # revenues_by_product_nature: "Chiffre d'affaire par type de produit"
     reverse: "Reverse condition"
     right_modules:
       # accountancy: "Droits module Comptabilité"
