--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -153,8 +153,8 @@ fra:
       # show: "Show backend/cells/purchases bar cell"
     backend/cells/purchases_expense_bar_cells:
       # show: "Show backend/cells/purchases expense bar cell"
-    backend/cells/revenus_by_product_nature_cells:
-      # show: "Show backend/cells/revenus by product nature cell"
+    backend/cells/revenues_by_product_nature_cells:
+      # show: "Show backend/cells/revenues by product nature cell"
     backend/cells/rss_cells:
       # show: "Show backend/cells/rss cell"
     backend/cultivable_land_parcels:
@@ -704,7 +704,7 @@ fra:
     # backend/cells/product_bar_cells: "Backend/cells/product bar cells"
     # backend/cells/purchases_bar_cells: "Backend/cells/purchases bar cells"
     # backend/cells/purchases_expense_bar_cells: "Backend/cells/purchases expense bar cells"
-    # backend/cells/revenus_by_product_nature_cells: "Backend/cells/revenus by product nature cells"
+    # backend/cells/revenues_by_product_nature_cells: "Backend/cells/revenues by product nature cells"
     # backend/cells/rss_cells: "Backend/cells/rss cells"
     # backend/cells: "Backend/cells"
     # backend/cultivable_land_parcels: "Backend/cultivable land parcels"
@@ -1536,7 +1536,7 @@ fra:
       one: "%{count} résultat"
       other: "%{count} résultats"
       zero: "Aucun résultat"
-    revenus_by_product_nature: "Chiffre d'affaire par type de produit"
+    revenues_by_product_nature: "Chiffre d'affaire par type de produit"
     reverse: "Appliquer la condition inverse"
     right_modules:
       accountancy: "Droits module Comptabilité"
