--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -132,6 +132,7 @@ jpn:
     backend/cells/product_pie_cells: #?
     backend/cells/purchases_bar_cells: #?
     backend/cells/purchases_expense_bar_cells: #?
+    backend/cells/revenues_by_product_nature_cells: #?
     backend/cells/revenus_by_product_nature_cells: #?
     backend/cells/rss_cells: #?
     backend/cultivable_land_parcels:
@@ -1403,7 +1404,7 @@ jpn:
       # one: "%{count} résultat"
       # other: "%{count} résultats"
       # zero: "Aucun résultat"
-    # revenus_by_product_nature: "Chiffre d'affaire par type de produit"
+    # revenues_by_product_nature: "Chiffre d'affaire par type de produit"
     # reverse: "Appliquer la condition inverse"
     right_modules:
       # accountancy: "Droits module Comptabilité"
