--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -420,7 +420,7 @@ eng:
       new: "Add a new disbursement"
       show: "Disbursement %{number} for %{payee}"
     backend/people:
-      # edit: "Modifier la personne\_: %{name}"
+      # edit: "Modifier la personne\_: %{full_name}"
       # index: "Personnes"
       # new: "Nouvelle personne"
       # show: "Personne\_: %{full_name}"
