--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -345,6 +345,176 @@ fra:
         zone: "Zone physique"
         zone_property_title: "Titre de propriété terrienne"
     catalog_price:
+      currency:
+        AED: "Dirham des Émirats"
+        AFN: "Afghani"
+        ALL: "Lek (monnaie)"
+        AMD: "Dram (monnaie)"
+        ANG: "Florin des Antilles néerlandaises"
+        AOA: "Kwanza angolais"
+        ARS: "Peso argentin"
+        AUD: "Dollar australien"
+        AWG: "Florin d’Aruba"
+        AZN: "Nouveau manat azéri"
+        BAM: "Marka (monnaie)"
+        BBD: "Dollar de la Barbade"
+        BDT: "Taka"
+        BGN: "Lev bulgare"
+        BHD: "Dinar bahreïni"
+        BIF: "Franc burundais"
+        BMD: "Dollar des Bermudes"
+        BND: "Dollar de Brunei"
+        BOB: "Boliviano"
+        BOV: "Mvdol"
+        BRL: "Réal brésilien"
+        BSD: "Dollar bahaméen"
+        BTN: "Ngultrum"
+        BWP: "Pula"
+        BYR: "Rouble biélorusse"
+        BZD: "Dollar de Belize"
+        CAD: "Dollar canadien"
+        CDF: "Franc congolais"
+        CHE: "Euro WIR"
+        CHF: "Franc suisse"
+        CHW: "Franc WIR"
+        CLF: "Unidad de formento"
+        CLP: "Peso chilien"
+        CNY: "Yuan renminbi"
+        COP: "Peso colombien"
+        COU: "Unidad de valor real"
+        CRC: "Colon costaricain"
+        CUC: "Peso cubain convertible"
+        CUP: "Peso cubain"
+        CVE: "Escudo cap-verdien"
+        CZK: "Couronne tchèque"
+        DJF: "Franc Djibouti"
+        DKK: "Couronne danoise"
+        DOP: "Peso dominicain"
+        DZD: "Dinar algérien"
+        EGP: "Livre égyptienne"
+        ERN: "Nakfa"
+        ETB: "Birr"
+        EUR: "Euro"
+        FJD: "Dollar fidjien"
+        FKP: "Livre des Îles Malouines"
+        FRF: "Franc français"
+        GBP: "Livre sterling"
+        GEL: "Lari (monnaie)"
+        GHS: "Cedi"
+        GIP: "Livre de Gibraltar"
+        GMD: "Dalasi"
+        GNF: "Franc guinéen"
+        GTQ: "Quetzal guatémaltèque"
+        GYD: "Dollar du Guyana"
+        HKD: "Dollar de Hong-Kong"
+        HNL: "Lempira hondurien"
+        HRK: "Kuna (monnaie)"
+        HTG: "Gourde haïtienne"
+        HUF: "Forint"
+        IDR: "Roupie indonésienne"
+        ILS: "Nouveau shekel"
+        INR: "Roupie indienne"
+        IQD: "Dinar irakien"
+        IRR: "Rial iranien"
+        ISK: "Couronne islandaise"
+        JMD: "Dollar jamaïcain"
+        JOD: "Dinar jordanien"
+        JPY: "Yen"
+        KES: "Shilling kényan"
+        KGS: "Som"
+        KHR: "Riel"
+        KMF: "Franc comorien"
+        KPW: "Won"
+        KRW: "Won"
+        KWD: "Dinar koweïtien"
+        KYD: "Dollar des Îles Caïmans"
+        KZT: "Tenge"
+        LAK: "Kip"
+        LBP: "Livre libanaise"
+        LKR: "Roupie srilankaise"
+        LRD: "Dollar libérien"
+        LSL: "Loti"
+        LTL: "Litas"
+        LVL: "Lats letton"
+        LYD: "Dinar libyen"
+        MAD: "Dirham marocain"
+        MDL: "Leu moldave"
+        MGA: "Ariary"
+        MKD: "Denar"
+        MMK: "Kyat"
+        MNT: "Tugrik"
+        MOP: "Pataca"
+        MRO: "Ouguiya"
+        MUR: "Roupie mauricienne"
+        MVR: "Rufiyaa"
+        MWK: "Kwacha malawite"
+        MXN: "Peso mexicain"
+        MXV: "Unidad de inversión"
+        MYR: "Ringgit"
+        MZN: "Metical"
+        NAD: "Dollar namibien"
+        NGN: "Naira"
+        NIO: "Córdoba nicaraguayen"
+        NOK: "Couronne norvégienne"
+        NPR: "Roupie népalaise"
+        NZD: "Dollar néo-zélandais"
+        OMR: "Rial omanais"
+        PAB: "Balboa panaméen"
+        PEN: "Nuevo sol"
+        PGK: "Kina"
+        PHP: "Peso philippin"
+        PKR: "Roupie pakistanaise"
+        PLN: "Zloty"
+        PYG: "Guarani (monnaie)"
+        QAR: "Rial qatari"
+        RON: "Leu roumain"
+        RSD: "Dinar serbe"
+        RUB: "Rouble russe"
+        RWF: "Franc rwandais"
+        SAR: "Riyal saoudien"
+        SBD: "Dollar des îles Salomon"
+        SCR: "Roupie seychelloise"
+        SDG: "Livre soudanaise"
+        SEK: "Couronne suédoise"
+        SGD: "Dollar singapourien"
+        SHP: "Livre de Sainte-Hélène"
+        SLL: "Leone"
+        SOS: "Shilling somalien"
+        SRD: "Dollar surinamien"
+        SSP: "Livre sud-soudanaise"
+        STD: "Dobra"
+        SVC: "Colon salvadorien"
+        SYP: "Livre syrienne"
+        SZL: "Lilangeni"
+        THB: "Baht"
+        TJS: "Somoni"
+        TMT: "Manat turkmène"
+        TND: "Dinar tunisien"
+        TOP: "Pa’anga"
+        TRY: "Livre turque"
+        TTD: "Dollar de Trinité-et-Tobago"
+        TWD: "Dollar taïwanais"
+        TZS: "Shilling tanzanien"
+        UAH: "Hryvnia"
+        UGX: "Shilling ougandais"
+        USD: "Dollar américain"
+        USN: "Dollar américain"
+        USS: "Dollar américain"
+        UYI: "Peso uruguayen en unités indexées (URUIURUI)"
+        UYU: "Peso uruguayen"
+        UZS: "Sum (monnaie)"
+        VEF: "Bolívar vénézuélien"
+        VND: "Dong (monnaie)"
+        VUV: "Vatu"
+        WST: "Tala"
+        XAF: "Franc CFA BEAC"
+        XCD: "Dollar de la Caraïbe orientale"
+        XOF: "Franc CFA BCEAO"
+        XPF: "Franc CFP"
+        YER: "Rial yéménite"
+        ZAR: "Rand"
+        ZMK: "Kwacha zambien"
+        ZWL: "Dollar zimbabwéen"
       indicator_name:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         animal_life_state: "Phase du bioprocessus de vie d’un animal"
@@ -2296,6 +2466,64 @@ fra:
         decimal: "Décimal"
         integer: "Entier"
         unitary: "Unitaire"
+      reference_name:
+        additive: "Adjuvant"
+        animal_building_division: "Zone dédiée aux animaux"
+        animal_food_building_division: "Zone de stockage dédiée aux aliments"
+        animal_medicine: "Produit vétérinaire"
+        baler: "Botteleuse"
+        building: "Bâtiment"
+        building_division: "Pièce ou zone d’un bâtiment"
+        calf: "Veau"
+        cattle_herd: "Troupeau de bovins"
+        chemical_fertilizer: "Engrais chimique"
+        crop: "Culture"
+        cultivable_land_parcel: "Parcelle culturale"
+        duck_band: "Bande de canards"
+        duck_herd: "Groupe de canards"
+        electricity: "Électricité"
+        equipment: "Équipement"
+        equipment_building_division: "Zone de stockage des équipements"
+        female_adult_cattle_herd: "Troupeau de vaches"
+        female_adult_cow: "Vache"
+        female_young_cow: "Génisse"
+        food: "Aliment"
+        forager: "Ensileuse"
+        fuel: "Carburant"
+        fungicide: "Fongicide"
+        gas: "Gaz"
+        grain: "Graine"
+        grass: "Herbe"
+        hay_rake: "Andaineur"
+        herbicide: "Herbicide"
+        insecticide: "Insecticide"
+        irrigation_water: "Eau (irrigation)"
+        land_parcel: "Parcelle"
+        land_parcel_cluster: "Îlot"
+        male_adult_cow: "Taureau"
+        male_young_cow: "Taurillon"
+        manager: "Responsable"
+        milk: "Lait"
+        milk_tank: "Tank à lait"
+        mineral_cleaner: "Nettoyant chimique"
+        molluscicide: "Molluscicide"
+        mower: "Faucheuse"
+        natural_water: "Eau de pluie / du puit"
+        organic_fertilizer: "Engrais organique"
+        plow: "Charrue"
+        running_water: "Eau du réseau"
+        seed: "Semence"
+        small_equipment: "Petit matériel"
+        sower: "Semoir"
+        sprayer: "Pulvérisateur"
+        spread_renting: "Location d’épandeur"
+        spreader: "Épandeur à engrais"
+        spreader_trailer: "Épandeur à fumier"
+        straw: "Paille"
+        technician: "Technicien"
+        tractor: "Tracteur"
+        trailer: "Remorque"
+        wine: "Vin"
       variety:
         additive: "Additif"
         anas: "Palmipède"
