--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -425,7 +425,7 @@ fra:
     affected_on: "Affecté le"
     age: "Âge" #?
     aim: "Aim"
-    all_taxes_included: "All taxes included"
+    all_taxes_included: "Toutes taxes comprises"
     allocation_account: "Compte de dotation"
     amount: "Montant"
     amounts_scale: "Nombre de chiffres après le virgule" #?
