--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -392,7 +392,7 @@ jpn:
       # new: "Ajout d’un décaissement"
       # show: "Décaissement n°%{number} pour %{payee}"
     backend/people:
-      # edit: "Modifier la personne\_: %{name}"
+      # edit: "Modifier la personne\_: %{full_name}"
       # index: "Personnes"
       # new: "Nouvelle personne"
       # show: "Personne\_: %{full_name}"
